--- a/The-KNB-App-Info.plist
+++ b/The-KNB-App-Info.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>FirebaseAppCheckEnabled</key>
+	<false/>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+	<true/>
 </dict>
 </plist>
