Fix notification system: APNs integration, reply notifications, delete functionality, and permission fixes

--- a/The-KNB-App-Info.plist
+++ b/The-KNB-App-Info.plist
@@ -6,6 +6,10 @@
 	<key>FirebaseAppCheckEnabled</key>
 	<false/>
 	<key>FirebaseAppDelegateProxyEnabled</key>
-	<true/>
+	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
