--- a/KNB/GoogleService-Info.plist
+++ b/KNB/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>676119484487-ldesssmu8up047s09atfn6fmkod4oqjj.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.676119484487-ldesssmu8up047s09atfn6fmkod4oqjj</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDe03230Y1krL4d0-yRrmmxtJrbDZdC6Qs</string>
 	<key>GCM_SENDER_ID</key>
