--- a/The-KNB-App-Info.plist
+++ b/The-KNB-App-Info.plist
@@ -6,6 +6,15 @@
 	<false/>
 	<key>FirebaseAppDelegateProxyEnabled</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.676119484487-ldesssmu8up047s09atfn6fmkod4oqjj</string>
+			</array>
+		</dict>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Location access is used to orient the compass so it can point East during prayer.</string>
 	<key>UIBackgroundModes</key>
